--- a/menu.css
+++ b/menu.css
@@ -11,7 +11,9 @@
 body{
     background-color: bisque;
 }
-
+button{
+  margin: 0 10%;
+}
 main{
     text-align: center;
 }
@@ -34,7 +36,9 @@ iframe {
   left: 9%;
   border: 0;
 }
-
+p{
+  text-align: center;
+}
 
 a{
     text-decoration: none;
